Adds password hashing and login endpoint with token.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ flask-sqlalchemy = "*"
 psycopg2-binary = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+flask-bcrypt = "*"
+pyjwt = "*"
 
 [dev-packages]
 
